refine type, alignment issues

--- a/css/main.css
+++ b/css/main.css
@@ -675,22 +675,25 @@ width: 45%;
   text-align: center;
   justify-content: center;
   color: #0075FF;
-}
-
-@media ( max-width: 550px) {
-  .button{
-    font-size: 1rem;
-  }
-}
-
-.button:hover {
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  margin: auto;
 }
 
 @media ( min-width: 700px) {
 .button{
   font-size: 18px;
+  margin:0;
+  }
 }
+
+@media ( max-width: 550px) {
+  .button{
+    font-size: 1rem;
+    flex-wrap: nowrap;
+  }
+}
+
+.button:hover {
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 
@@ -711,22 +714,18 @@ width: 45%;
 
 /*title image*/
 .title img{
-  width:95%;
-  padding-left: 8%;
+  display: flex;
+  width:80%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-@media ( min-width: 700px) {
-.title img{
-    order: 2;
-    width: 70%;
-    padding-left: 0;
-  }
-}
 
 @media ( min-width: 700px) {
 .title img{
     order: 2;
     width: 60%;
+    padding-left: 0;
   }
 }
 
@@ -757,7 +756,6 @@ width: 45%;
   display: flex;
 }
 }
-
 
 .intro img{
   display: flex;
@@ -1168,18 +1166,11 @@ margin-bottom: auto;
 }
 
 /*Tasks"*/
-.user-flows h3{
-    padding-left: 5%;
-    font-family: "muli";
-    font-weight: 400;
-    font-size: 1.25rem;
+.user-flows h2{
+display: flex;
+justify-content: center;
 }
 
-@media ( min-width: 700px) {
-  .user-flows h3{
-    font-size: 1.5rem;
-  }
-}
 
 /*user flows orange list box*/
 .user-flows ul{
